--- a/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
+++ b/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
@@ -6,6 +6,7 @@
     <String Key="Game.Website" Value="http://GameFramework.cn/" />
     <String Key="Symbol.Colon" Value="：" />
     <String Key="Message.Prize" Value="奖励" />
+    <String Key="Message.Gold" Value="金币" />
     <String Key="GameOver.Title" Value="你好像输了" />
     <String Key="GameOver.Des" Value="放心，你并不是打不赢，你只是单纯的输了。" />
     <String Key="GameOver.ResurgenceDes" Value="不过，你可以花费500金币续命，要继续吗？" />
