将Hero和Monster的公共部分抽离到FightEntity

--- a/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
+++ b/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
@@ -15,7 +15,7 @@
     <String Key="Property.Atk" Value="攻击" />
     <String Key="Property.Def" Value="防御" />
     <String Key="Property.HP" Value="血量" />
-    <String Key="Property.MP" Value="愤怒" />
+    <String Key="Property.MP" Value="魔法" />
     <String Key="Operate.Back" Value="返回" />
     <String Key="Operate.BombSkill" Value="爆!" />
     <String Key="Operate.Continue" Value="继续" />
