增加Loading界面；优化怪物的攻击逻辑（解决和敌人重合的问题）

--- a/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
+++ b/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
@@ -8,6 +8,7 @@
     <String Key="Alert.OperateFail" Value="操作失败" />
     <String Key="Message.Prize" Value="奖励" />
     <String Key="Message.Gold" Value="金币" />
+    <String Key="Message.Loading" Value="加载中..." />
     <String Key="Message.GoldNotEnough" Value="金币不足" />
     <String Key="GameOver.Title" Value="你好像输了" />
     <String Key="GameOver.Des" Value="放心，你并不是打不赢，你只是单纯的输了。" />
