玩家界面增加攻速显示

--- a/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
+++ b/Assets/GF_JustOneLevel/Localization/ChineseSimplified/Dictionaries/Default.xml
@@ -19,6 +19,7 @@
     <String Key="Property.Def" Value="防御" />
     <String Key="Property.HP" Value="血量" />
     <String Key="Property.MP" Value="魔法" />
+    <String Key="Property.AtkSpeed" Value="攻速" />
     <String Key="Operate.Back" Value="返回" />
     <String Key="Operate.BombSkill" Value="爆!" />
     <String Key="Operate.Continue" Value="继续" />
